--- a/Week1/hw1_7111064108.ipynb
+++ b/Week1/hw1_7111064108.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -162,21 +162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['zebra'], ['monkey'], ['zerba'], ['tomato'], ['zebra', 'zebra', 'zebra', 'zebra']]\n",
-      "{'zebra': 5076, 'monkey': 7586, 'zerba': 2102, 'tomato': 1719, 'tiger': 6202, 'corn': 2031, 'carrot': 2668, 'dog': 3380}\n"
+      "[['zebra'], ['monkey'], ['zebra'], ['tomato'], ['zebra', 'zebra', 'zebra', 'zebra']]\n",
+      "{'zebra': 7178, 'monkey': 7586, 'tomato': 1719, 'tiger': 6202, 'corn': 2031, 'carrot': 2668, 'dog': 3380}\n"
      ]
     }
    ],
    "source": [
     "splited_text = []\n",
-    "for text in file_text:\n",
+    "for text in fixed_out:\n",
     "    if not text.isdigit():  \n",
     "        splited_text.append(text.split(\"%\"))\n",
     "    \n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
     "splited_text = []\n",
     "vegetable = ['corn','carrot','tomato']\n",
     "\n",
-    "for text in file_text:\n",
+    "for text in fixed_out:\n",
     "    if not text.isdigit() and not any(item in text for item in vegetable):  \n",
     "        splited_text.append(text.split(\"%\"))\n",
     "    \n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
