--- a/Week1/hw1_7111064108.ipynb
+++ b/Week1/hw1_7111064108.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,8 @@
     "with open(r'animals.out', 'w') as f:\n",
     "    for item in sorted_int_list:\n",
     "        # write each item on a new line\n",
-    "        f.write(\"%s\\n\" % item)\n",
+    "        f.write(\"%s \" % item)\n",
+    "    f.write(\"\\n\")\n",
     "    f.write('\\n'.join(wb_list))\n",
     "    \n",
     "    print('WB Done')"
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['zebra'], ['monkey'], ['zerba'], ['zebra', 'zebra', 'zebra', 'zebra'], ['tiger', 'tiger', 'tiger', 'tiger', 'tiger']]\n",
-      "{'zebra': 5076, 'monkey': 7586, 'zerba': 2102, 'tiger': 6202, 'dog': 3380}\n"
+      "[['zebra'], ['monkey'], ['zebra'], ['zebra', 'zebra', 'zebra', 'zebra'], ['tiger', 'tiger', 'tiger', 'tiger', 'tiger']]\n",
+      "{'zebra': 7178, 'monkey': 7586, 'tiger': 6202, 'dog': 3380}\n"
      ]
     }
    ],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
