--- a/Week1/hw1_7111064108.ipynb
+++ b/Week1/hw1_7111064108.ipynb
@@ -174,11 +174,8 @@
     }
    ],
    "source": [
-    "splited_text = []\n",
-    "for text in fixed_out:\n",
-    "    if not text.isdigit():  \n",
-    "        splited_text.append(text.split(\"%\"))\n",
-    "    \n",
+    "splited_text = [text.split(\"%\") for text in fixed_out if not text.isdigit()]\n",
+    "\n",
     "print(splited_text[:5])\n",
     "\n",
     "animals_out = {}\n",
@@ -189,7 +186,7 @@
     "            animals_out[animal] += 1\n",
     "        else:\n",
     "            animals_out[animal] = 1\n",
-    "            \n",
+    "\n",
     "print(animals_out)"
    ]
   },
@@ -208,13 +205,10 @@
     }
    ],
    "source": [
-    "splited_text = []\n",
     "vegetable = ['corn','carrot','tomato']\n",
     "\n",
-    "for text in fixed_out:\n",
-    "    if not text.isdigit() and not any(item in text for item in vegetable):  \n",
-    "        splited_text.append(text.split(\"%\"))\n",
-    "    \n",
+    "splited_text = [text.split(\"%\") for text in fixed_out if not text.isdigit() and all(item not in text for item in vegetable)]\n",
+    "\n",
     "print(splited_text[:5])\n",
     "\n",
     "animals_out = {}\n",
@@ -225,7 +219,7 @@
     "            animals_out[animal] += 1\n",
     "        else:\n",
     "            animals_out[animal] = 1\n",
-    "            \n",
+    "\n",
     "print(animals_out)"
    ]
   },
@@ -243,9 +237,7 @@
     }
    ],
    "source": [
-    "sum_of_animal = {}\n",
-    "sum_of_animal['total_count'] = sum(animals_out.values())\n",
-    "\n",
+    "sum_of_animal = {'total_count': sum(animals_out.values())}\n",
     "print(sum_of_animal)"
    ]
   },
