--- a/Week5/binary_tour.ipynb
+++ b/Week5/binary_tour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,26 +34,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[21, 21], [17, 21], [24, 34], [15, 5], [17, 3], [35, 10], [6, 26], [2, 35], [10, 3], [8, 21]]\n"
+      "[34, 21]\n",
+      "[35, 35]\n",
+      "[23, 10]\n",
+      "[[34, 21], [24, 5], [21, 10], [34, 35], [17, 26], [35, 35], [23, 10], [17, 2], [21, 3], [8, 15]]\n"
      ]
     }
    ],
    "source": [
     "#Binary Tournament\n",
     "#1. Creating compete pairs\n",
+    "\n",
     "compete_pairs = []\n",
     "for _ in range(pop_size//2):\n",
+    "    mutate = random.randint(0,1)\n",
+    "    \n",
     "    #Shuffle the list\n",
     "    random.shuffle(pop)\n",
+    "    \n",
+    "    #Extract two fitness from pop\n",
     "    x1 = pop.pop()\n",
     "    x2 = pop.pop()\n",
+    "    \n",
+    "    if mutate == 1:\n",
+    "        pair = [x1,x2]\n",
+    "        #Mutate\n",
+    "        bias_range = min(fit_range - x1 , fit_range -x2)\n",
+    "        bias = random.randint(0,bias_range)\n",
+    "    \n",
+    "        #Randomly pick a fitness in pair for mutation or simply not mutating\n",
+    "        not_picked_fitness = random.sample(pair,1)[0]\n",
+    "        \n",
+    "        pair.remove(not_picked_fitness)\n",
+    "        picked_fitness = pair[0]\n",
+    "        biased_fitness = picked_fitness + bias\n",
+    "        \n",
+    "        x1,x2 = biased_fitness,picked_fitness\n",
+    "        print([x1,x2])\n",
+    "        \n",
+    "    #Recombine\n",
     "    compete_pairs.append([x1,x2])\n",
     "    \n",
     "print(compete_pairs)"
@@ -61,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, 17, 24, 5, 3, 10, 6, 2, 3, 8]\n"
+      "[21, 5, 10, 34, 17, 35, 10, 2, 3, 8]\n"
      ]
     }
    ],
@@ -86,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, 17, 24, 5, 3, 10, 6, 2, 3, 8, 4, 3, 2, 2, 4, 10, 11, 7, 6, 2]\n"
+      "[21, 5, 10, 34, 17, 35, 10, 2, 3, 8, 10, 13, 17, 30, 22, 14, 10, 16, 10, 8]\n"
      ]
     }
    ],
@@ -111,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
