--- a/Week5/binary_tour.ipynb
+++ b/Week5/binary_tour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[34, 21]\n",
-      "[35, 35]\n",
-      "[23, 10]\n",
-      "[[34, 21], [24, 5], [21, 10], [34, 35], [17, 26], [35, 35], [23, 10], [17, 2], [21, 3], [8, 15]]\n"
+      "9\n",
+      "[19, 10]\n",
+      "-3\n",
+      "[18, 21]\n",
+      "0\n",
+      "[34, 34]\n",
+      "-2\n",
+      "[1, 3]\n",
+      "-1\n",
+      "[20, 21]\n",
+      "1\n",
+      "[22, 21]\n",
+      "[[19, 10], [8, 21], [35, 6], [18, 21], [24, 35], [26, 15], [34, 34], [1, 3], [20, 21], [22, 21]]\n"
      ]
     }
    ],
@@ -66,9 +75,9 @@
     "    if mutate == 1:\n",
     "        pair = [x1,x2]\n",
     "        #Mutate\n",
-    "        bias_range = min(fit_range - x1 , fit_range -x2)\n",
-    "        bias = random.randint(0,bias_range)\n",
-    "    \n",
+    "        bias_range = min(fit_range - x1 , fit_range -x2,x1,x2)\n",
+    "        bias = random.randint(-bias_range,bias_range)\n",
+    "        print(bias)\n",
     "        #Randomly pick a fitness in pair for mutation or simply not mutating\n",
     "        not_picked_fitness = random.sample(pair,1)[0]\n",
     "        \n",
