--- a/Week5/binary_tour.ipynb
+++ b/Week5/binary_tour.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 9, 36, 27, 8, 11, 34, 7, 20, 24, 37, 27, 37, 2, 14, 34, 15, 31, 25, 25, 30, 13, 23, 29, 12, 24, 23, 18, 24, 32]\n"
+     ]
+    }
+   ],
    "source": [
     "from random import Random\n",
     "import random\n",
@@ -14,7 +22,7 @@
     "\n",
     "#A few useful constants\n",
     "#\n",
-    "pop_size=20\n",
+    "pop_size=30\n",
     "generations=10\n",
     "fit_range=40\n",
     "\n",
@@ -22,38 +30,30 @@
     "#Init the random number generator\n",
     "#\n",
     "prng=Random()\n",
-    "prng.seed(123)\n",
+    "prng.seed()\n",
     "\n",
     "\n",
     "#Let's suppose we have an imaginary problem that generates\n",
     "#integer fitness values on some fixed range.  We'll start by randomly\n",
     "#initializing a population of fitness values\n",
     "#\n",
-    "pop = [prng.randrange(0,fit_range) for _ in range(pop_size)]\n"
+    "pop = [prng.randrange(0,fit_range) for _ in range(pop_size)]\n",
+    "print(pop)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "[19, 10]\n",
-      "-3\n",
-      "[18, 21]\n",
-      "0\n",
-      "[34, 34]\n",
-      "-2\n",
-      "[1, 3]\n",
-      "-1\n",
-      "[20, 21]\n",
-      "1\n",
-      "[22, 21]\n",
-      "[[19, 10], [8, 21], [35, 6], [18, 21], [24, 35], [26, 15], [34, 34], [1, 3], [20, 21], [22, 21]]\n"
+      "List of biases:\n",
+      " [0, 3, 0, 0, 5, 12, 0, -1, 9, 0, 2, 0, -1, -1, 0]\n",
+      "Compete_pairs:\n",
+      "[[3, 34], [35, 32], [27, 24], [27, 25], [18, 13], [36, 24], [18, 7], [28, 29], [20, 11], [31, 31], [10, 8], [15, 34], [35, 36], [36, 37], [30, 25]]\n"
      ]
     }
    ],
@@ -62,7 +62,9 @@
     "#1. Creating compete pairs\n",
     "\n",
     "compete_pairs = []\n",
+    "bias_list = []\n",
     "for _ in range(pop_size//2):\n",
+    "    bias = 0\n",
     "    mutate = random.randint(0,1)\n",
     "    \n",
     "    #Shuffle the list\n",
@@ -77,7 +79,6 @@
     "        #Mutate\n",
     "        bias_range = min(fit_range - x1 , fit_range -x2,x1,x2)\n",
     "        bias = random.randint(-bias_range,bias_range)\n",
-    "        print(bias)\n",
     "        #Randomly pick a fitness in pair for mutation or simply not mutating\n",
     "        not_picked_fitness = random.sample(pair,1)[0]\n",
     "        \n",
@@ -86,24 +87,27 @@
     "        biased_fitness = picked_fitness + bias\n",
     "        \n",
     "        x1,x2 = biased_fitness,picked_fitness\n",
-    "        print([x1,x2])\n",
-    "        \n",
+    "    \n",
     "    #Recombine\n",
     "    compete_pairs.append([x1,x2])\n",
     "    \n",
-    "print(compete_pairs)"
+    "    bias_list.append(bias)\n",
+    "\n",
+    "print(f\"List of biases:\\n {bias_list}\")\n",
+    "print(f\"Compete_pairs:\\n{compete_pairs}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, 5, 10, 34, 17, 35, 10, 2, 3, 8]\n"
+      "Competed_result:\n",
+      " [3, 32, 24, 25, 13, 24, 7, 28, 11, 31, 8, 15, 35, 36, 25]\n"
      ]
     }
    ],
@@ -116,19 +120,20 @@
     "    else:\n",
     "        competed_result.append(pairs[1])\n",
     "        \n",
-    "print(competed_result)"
+    "print(f\"Competed_result:\\n {competed_result}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, 5, 10, 34, 17, 35, 10, 2, 3, 8, 10, 13, 17, 30, 22, 14, 10, 16, 10, 8]\n"
+      "New pop:\n",
+      "[3, 32, 24, 25, 13, 24, 7, 28, 11, 31, 8, 15, 35, 36, 25, 9, 5, 20, 12, 7, 27, 33, 33, 26, 10, 20, 13, 21, 7, 29]\n"
      ]
     }
    ],
@@ -141,19 +146,19 @@
     "    competed_result.append(int(child))\n",
     "    \n",
     "pop = competed_result\n",
-    "print(pop)\n"
+    "print(f\"New pop:\\n{pop}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "30\n"
      ]
     }
    ],
