--- a/Week6/src/Final/Testing/EV3_Problem2.ipynb
+++ b/Week6/src/Final/Testing/EV3_Problem2.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Population import Population\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
     "from fitnessFunc import *\n",
     "import copy\n",
     "import math\n",
     "from operator import attrgetter\n",
-    "from Individual import *"
+    "from Individual import *\n",
+    "from Population import Population"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +90,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15280>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE30A0>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +144,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15070>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE7940>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +194,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15070>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE7940>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -227,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +244,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15070>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE7940>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -256,7 +259,7 @@
       "[1.0389857235051672, -4.209368780895618]\n",
       "[1.7568100504369673, -4.26047255718826]\n",
       "[-1.5760489922854597, 1.2624023044010855]\n",
-      "[-4.26047255718826, 1.7568100504369673]\n",
+      "[-3.5988004996271354, -3.2451517705223]\n",
       "[1.0389857235051672, -4.209368780895618]\n",
       "---------------------------------\n",
       "Average Fitness Of population:\n",
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +294,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15070>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE7940>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -306,7 +309,7 @@
       "[3.0616776451576238, -5.12]\n",
       "[2.206067321547078, -4.133220671869639]\n",
       "[-3.6897104099269313, 5.12]\n",
-      "[2.2321434584469007, 5.12]\n",
+      "[5.12, 5.12]\n",
       "[-3.6717184324232326, -3.9779753801138034]\n",
       "---------------------------------\n",
       "Average Fitness Of population:\n",
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +343,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15070>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE7940>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -355,11 +358,11 @@
       "[3.0616776451576238, -5.12]\n",
       "[2.206067321547078, -4.133220671869639]\n",
       "[-3.6897104099269313, 5.12]\n",
-      "[2.2321434584469007, 5.12]\n",
+      "[5.12, 5.12]\n",
       "[-3.6717184324232326, -3.9779753801138034]\n",
       "---------------------------------\n",
       "Average Fitness Of population:\n",
-      " 38.65536263183519\n",
+      " 40.16154828425876\n",
       "bestFitness:\n",
       "11.754456102858137\n",
       "bestIndividual:\n",
@@ -375,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +392,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15280>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE30A0>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -426,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +472,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000025FDBA15280>>\n",
+      " <bound method N_Dimensional_Rastrigin of <Population.Population object at 0x0000023829FE30A0>>\n",
       "---------------------------------\n",
       "SequenceLength:\n",
       " 2\n",
@@ -502,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
