Fix crossOver for it to work

--- a/Week6/src/Final/Testing/EV3_Problem1.ipynb
+++ b/Week6/src/Final/Testing/EV3_Problem1.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
     "from Population import Population\n",
     "from fitnessFunc import *\n",
     "import copy\n",
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB5B0>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x0000027198ED2970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +148,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB820>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x00000271A1432970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +203,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB820>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x00000271A1432970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB820>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x00000271A1432970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +313,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB820>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x00000271A1432970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +367,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB820>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x00000271A1432970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -405,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +421,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB5B0>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x0000027198ED2970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +510,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB5B0>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x0000027198ED2970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +576,7 @@
       "CrossOverFraction:  0.6\n",
       "--------------------------------\n",
       "Fitness Function:\n",
-      " <bound method CalulateEnergy of <Population.Population object at 0x0000026E03CBB5B0>>\n",
+      " <bound method CalulateEnergy of <Population.Population object at 0x0000027198ED2970>>\n",
       "Interaction Matrix:\n",
       "[[10, 4, 1], [4, 10, 5], [1, 5, 10]]\n",
       "SelfEnergyVector:\n",
