--- a/Week7/binary_tornement_mo.ipynb
+++ b/Week7/binary_tornement_mo.ipynb
@@ -23,6 +23,10 @@
     "          elif other dominates self: return -1\n",
     "          else: non-domination return 0\n",
     "        \"\"\"\n",
+    "        X_DOMINATES_Y = 1\n",
+    "        NON_DOMINATION = 0\n",
+    "        X_DOMINATED_BY_Y = -1\n",
+    "        \n",
     "        #Check if dominates.\n",
     "        dominationFlag_current  = 0\n",
     "        dominationFlag_previous = 0\n",
@@ -30,14 +34,14 @@
     "            dominationFlag_previous = dominationFlag_current\n",
     "            \n",
     "            if item > other.state[idx]:\n",
-    "                dominationFlag_current = -1\n",
+    "                dominationFlag_current = X_DOMINATED_BY_Y\n",
     "            elif item < other.state[idx]:\n",
-    "                dominationFlag_current = 1\n",
+    "                dominationFlag_current = X_DOMINATES_Y\n",
     "            else:\n",
     "                dominationFlag_current = dominationFlag_current\n",
     "            \n",
-    "            if dominationFlag_previous != 0 and dominationFlag_current != dominationFlag_previous:\n",
-    "                return 0\n",
+    "            if dominationFlag_previous != NON_DOMINATION and dominationFlag_current != dominationFlag_previous:\n",
+    "                return NON_DOMINATION\n",
     "            \n",
     "        return dominationFlag_current"
    ]
